--- a/.github/workflows/sync_to_gitlab.yml
+++ b/.github/workflows/sync_to_gitlab.yml
@@ -22,4 +22,5 @@ jobs:
             - name: Push to GitLab
               run: |
                   git remote add gitlab https://oauth2:${{ secrets.GITLAB_TOKEN }}@gitlab.ganxing.fun/root/starcloud-llmops-ui-user.git
+                  git pull gitlab main --allow-unrelated-histories
                   git push gitlab main
