--- a/.github/workflows/sync_to_gitlab.yml
+++ b/.github/workflows/sync_to_gitlab.yml
@@ -13,6 +13,7 @@ jobs:
               uses: actions/checkout@v3
               with:
                   persist-credentials: false
+                  fetch-depth: 0
 
             - name: Configure Git
               run: |
